mysite-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: <mysite-app>
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: <mysite-app>
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <mysite-app>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <mysite-app>
  template:
    metadata:
      labels:
        app: <mysite-app>
    spec:
      containers:
      - name: <mysite-app>
        image: gcr.io/<project-id>/<registry-name>:<commit-id>
        ports:
        - containerPort: 80
