mysite-default.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: <mysite-app>
  name: <mysite-app>
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    name: <mysite-app>
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: <mysite-app>
  name: <mysite-app>
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: <mysite-app>
    spec:
      containers:
      - image: gcr.io/<project-id>/<registry-name>:<commit-id>
        name: <mysite-app>
        ports:
        - containerPort: 8080
