ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: <mysite-ingress>
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - <mysite.com>
    - <api.mysite.com>
    secretName: mysite-tls
  rules:
  - host: <mysite.com>
    http:
      paths:
      - backend:
          serviceName: <mysite-app>
          servicePort: 80
  - host: <api.mysite.com>
    http:
      paths:
      - backend:
          serviceName: <mysite-server>
          servicePort: 80
